services/test/nginx-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - test.knetl.net
    secretName: prod-cert
  rules:
    - host: test.knetl.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  nginx
                port:
                  number: 80
